package com.madrat.spaceshooter.apiserver.resourcereprs;

public class ErrorCode {

    public static final String OK = "OK";
    public static final String ERR_PARSE = "PARSING_ERROR";
    public static final String ERR_INC_FMT = "INCORRECT_FORMAT_ERROR";
    public static final String ERR = "ERROR";
    public static final String ERR_UNEXPECTED = "ERROR_UNEXPECTED";
    public static final String ERR_DUP = "DUPLICATE_ENTRY_ERROR";
}
