@startuml

title __SPACESHOOTERSERVER's Class Diagram__\n

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.configurations {
      class CustomWebMvcConfiguration {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.resourcereprs {
      class ErrorCode {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class ErrorHandler {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.resourcereprs {
      class Help {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class HelpController {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.utils.logger {
      class Logger {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.resourcereprs {
      class ScoreBoard {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    class Server {
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.resourcereprs {
      class SimpleResponse {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.resourcereprs {
      class User {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class UserController {
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.database {
      interface UserRepository {
      }
    }
  }
  

  CustomWebMvcConfiguration -up-|> WebMvcConfigurationSupport
  ErrorHandler -up-|> ErrorController
  User -up-|> Comparable
  UserController o-- UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
